--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
   <!-- CSS dependencies -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="wireframe.css">
+  <link rel="stylesheet" href="../css/styles.css"
 </head>
 
 <body class="">
@@ -40,6 +41,11 @@
           <input class="form-control" id="searchtext" type="text">
           <a class="btn btn-link my-2 my-sm-0" id="submit" ><i class="fa d-inline fa-lg fa-search text-primary"></i></a>
         </form>
+      <form class="iconuser">
+
+      </form>
+
+        
       </div>
     </div>
   </nav>
