--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
   <!-- CSS dependencies -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="wireframe.css">
-  <link rel="stylesheet" href="../css/styles.css"
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body class="">
