funcionando todo menos errores

--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link mx-2" >Contact</a>
           </li>
           <li class="nav-item btn" id="Login">
-            <a class="nav-link mx-2" >LogIn</a>
+            <a class="nav-link mx-2" >Login</a>
           </li>
           <li class="nav-item btn" id="FaQ">
             <a class="nav-link mx-2" >FaQ's</a>
