--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- PAGE settings -->
   <link rel="icon" >
   <title>Landing</title>
@@ -11,6 +12,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="css/wireframe.css">
   <link rel="stylesheet" href="css/styles.css">
+
+
+  <link rel="stylesheet" href="node_modules/flashjs-master/example/app.css">
+  <link rel="stylesheet" href="node_modules/flashjs-master/dist/flash.css">
 </head>
 
 <body class="">
@@ -90,13 +95,18 @@
       </div>
     </div>
   </div>
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="node_modules/flashjs-master/dist/flash.min.js"></script>
+  <script src="node_modules/flashjs-master/dist/flash.jquery.min.js"></script>
+  <script src="node_modules/flashjs-master/example/app.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous" ></script>
-  <script src="js/mainfetch.js"></script>
   <script src="js/html.js"></script>
-  <script src="js/generador.js"></script>
-  <script src="js/class.js"></script>
+
+ 
 
 </body>
 
