--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="css/wireframe.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="lib/flashjs-master/dist/flash.css">
+  <link rel="stylesheet" href="lib/flashjs/dist/flash.css">
 </head>
 
 <body class="">
@@ -94,8 +94,8 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-  <script src="lib/flashjs-master/dist/flash.min.js"></script>
-  <script src="lib/flashjs-master/dist/flash.jquery.min.js"></script>
+  <script src="lib/flashjs/dist/flash.min.js"></script>
+  <script src="lib/flashjs/dist/flash.jquery.min.js"></script>
   <script src="js/flashmessage.js"></script>
   <script src="js/html.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
