--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
         </ul>
         <form class="form-inline my-2 my-lg-0 "id="frm-search">
           <input class="form-control" id="searchtext" type="text">
-          <a class="btn btn-link my-2 my-sm-0" id="submit" ><i class="fa d-inline fa-lg fa-search text-primary"></i></a>
+          <!-- <a class="btn btn-link my-2 my-sm-0" id="submit" >
+            <i class="fa d-inline fa-lg fa-search text-primary"></i>
+
+          </a> -->
         </form>
       <form class="iconuser">
 
